[package]
name = "flash-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
anyhow = "1.0"
memmap2 = "0.5"
tokio = { version = "1.20", features = ["sync"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.20", features = ["full"] }
