[package]
name = "flash-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.20", features = ["sync", "macros", "rt"] }
libc = "0.2"
futures = "0.3"
bytes = "1.2"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"
bytesize = "1.1"
pprof = { version = "0.10", features = ["flamegraph"] }
