[package]
name = "flash-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1.20", features = ["sync"] }
libc = "0.2"
bytes = "1.2"

# Dependencies for test
[dev-dependencies]
rand = "0.8"
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"
bytesize = "1.1"
pprof = { version = "0.10", features = ["flamegraph"] }
num_cpus = "1.13"